kernel/tests/snapshots/runtime_cli_snapshots/validate_deviation_authorization_result__approved.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": {
      "comments": "",
      "deviation_authorization": {
        "comment": "",
        "decision": "PASS",
        "id": "dev-001"
      },
      "overall": "APPROVE",
      "summary": "Authorized."
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_deviation_authorization_result_ok"
}
