kernel/tests/snapshots/runtime_cli_snapshots/validate_deviation_authorization_result__rejected.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": {
      "comments": "Tighten scope.",
      "deviation_authorization": {
        "comment": "Deviation goes beyond what the paper authorizes.",
        "decision": "FAIL",
        "id": "dev-002"
      },
      "overall": "REJECT",
      "summary": "Rejected."
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_deviation_authorization_result_ok"
}
